# legend-lite

./: .dockerignore  .gitignore  AGENTS.md  FAQ.md  PCT_FAILURE_ANALYSIS.md  README.md  TECH_DEBT.md  TestDuckDBStruct.java  fold_plan_backup.md  null  null.wal  pom.xml  progress-c0954a.txt  progress.txt  test_unnest.sql
core/: README.md  pom.xml
docs/: AUDIT_2026_07.md  AUDIT_23_SPECIAL_CASING.md  BAZEL_DEPENDENCY_PROPOSAL.md  BAZEL_IMPLEMENTATION_PLAN.md  BURNDOWN.md  CLEAN_SHEET_INVERSION.md  COMPILE_MODEL_AND_SIGNATURES.md  CONSTRUCT_COVERAGE.md  CORE_PHASE_F_TYPED_ELEMENTS.md  CORE_PHASE_F_TYPED_ELEMENTS_V2.md  CROSS_PROJECT_JOINS.md  DESIGN_DEBT.md  ENGINEERING_LOG.md  FQN_MIGRATION.md  FUNCTION_REGISTRY.md  LEGEND_ENGINE_TEST_PORTING.md  LEGEND_MAPPING_PATTERNS.md  LEGEND_SQL_VISION.md  M2M_DEEP_DIVE.md  MAPPING_CLEAN_SHEET.md  MAPPING_FEATURE_CHECKLIST.md  MAPPING_LEGACY_TO_FUNCTION.md  MAPPING_STORE_GAP_ANALYSIS.md  MAPPING_UNIFICATION_PLAN.md  MODEL_TO_MODEL.md  OUTSTANDING.md  PCT_BURNDOWN.md  PCT_CORPUS.md  PCT_NATIVE_PLAN.md  PHASE_5_6_IMPLEMENTATION_PLAN.md  PHASE_B2_RESULT_VALUE.md  PHASE_B_COMPILED_ELEMENTS.md  PHASE_G_SPEC_COMPILER.md  PHASE_H2_H3_RESOLVER_PLAN.md  PHASE_HIJ_LOWERING.md  PHASE_H_PLAN.md  PHASE_K_EXECUTION.md  PIPELINE.md  QUERY_DEMAND_PRUNING.md  RELATIONAL_CORPUS.md  (+27 more)
engine/: add_imports.py  null  null.wal  pom.xml
experiments/legend_rules_test/: .bazelrc  BUILD.bazel  MODULE.bazel  legend.bzl  legend_ext.bzl  test_full_pipeline.sh  version_check.bzl
experiments/legend_rules_test/projects/refdata/: BUILD.bazel
experiments/legend_rules_test/projects/refdata/src/refdata/: Currency.pure  Region.pure  Sector.pure
experiments/legend_rules_test/projects/trading/: BUILD.bazel
experiments/legend_rules_test/projects/trading/src/trading/: Trade.pure
experiments/tree_artifact_test/: .bazelrc  BUILD.bazel  MODULE.bazel  defs.bzl  test_unused_inputs.sh
experiments/tree_artifact_test/src/: unused_element_a.txt  unused_element_b.txt  used_element.txt
nlq/: pom.xml
pct/: pom.xml
pct-corpus/: pom.xml
progress/: baseline-failures.txt  mr-rewrite-progress.md  v2-suite-baseline.txt
scripts/: generate_pure_constants.py  outstanding.py  (+1 more)
(+1579 files in other folders)
